Check the ETag cache for items presence

BUG: 295469
FIXED-IN: 4.8.2

(cherry picked from commit 183f97607445c0afb371e1f30092b9ab0b60a527)